[package]
name = "pkimgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
openssl = { version = "0.10.72", features = ["vendored"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.11.5"
log = "0.4.22"
